# Trading

./: .dockerignore  .gitignore  Analysis.txt  BestWiningOptionsv1.py  DEPLOY.md  Dockerfile  Flow.py  OptionSwing.py  Options.py  Procfile  build.bat  build.ps1  dashboard.py  deploy.bat  deploy.ps1  docker-compose.yml  market_analysis.py  pyproject.toml  requirements.txt  run.ps1  run_analysis.py  start_dashboard.bat  trading_ui.py  watchlists.json  watchlists_store.py
.streamlit/: config.toml  credentials.toml
docs/: WIKI.md
trading_dashboard/: __init__.py
